# record_keeper_evm

./: .gitignore  Cargo.toml  README.md  ethereum_wallet
contracts/: user_record.sol
src/: commands.rs  main.rs  mod.rs  model.rs
src/api/: config.rs  server.rs
src/commands/: start.rs
src/database/: mod.rs  provider.rs
src/database/postgres/: config.rs  mod.rs  model.rs  postgres.rs  schema.rs
src/database/postgres/migrations/2024-07-29-144551_create_users/: up.sql
src/database/postgres/migrations/2024-07-29-145246_user_records/: up.sql
src/database/postgres/migrations/2024-07-30-111942_user_records/: down.sql  up.sql
src/evm/: evm_service.rs  mod.rs
