[package]
name = "record_keeper"
version = "0.1.0"
edition = "2021"

[dependencies]

chrono = "0.4.38"
tonic = { version = "0.5.2" }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2.0", features = [
    "postgres",
    "chrono",
    "numeric",
    "r2d2",
] }
diesel_migrations = "2.2.0"
structopt = { version = "0.3", default-features = false }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
async-std = { version = "1.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
async-trait = "0.1.50"
anyhow = "1.0"
futures = "0.3.15"
ctrlc = "3.1.9"
revm = "12.1.0"
axum = "0.7.5"
hex = "0.4.3"
[build-dependencies]
tonic-build = "0.5.2"
